--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Redis2Websocket instant webserver (based on Flask-SocketIO)</title>
+    <title>Redis2Websocket/Flask-SocketIO demo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
     <script type="text/javascript" charset="utf-8">
@@ -121,9 +121,9 @@
     </script>
 </head>
 <body>
-    <h1>Redis2Websocket instant webserver (based on Flask-SocketIO)</h1>
+    <h1>Redis2Websocket/Flask-SocketIO demo</h1>
     
-    <h2>Load file:</h2>
+    <h2>Files:</h2>
     <div>
         <ul id="filelist">
         </ul>
