--- a/example/templates/dir2web.html
+++ b/example/templates/dir2web.html
@@ -9,7 +9,7 @@
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
-            var socket = io('http://localhost:8899');
+            var socket = io('{{scheme}}://{{host}}:8899');
             var room_secret = null;
 
 
