--- a/example/templates/time.html
+++ b/example/templates/time.html
@@ -9,7 +9,7 @@
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
-            var socket = io('http://localhost:8899/');
+            var socket = io('{{scheme}}://{{host}}:8899/');
 
             // Event handler for new connections.
             // The callback function is invoked when a connection with the
