changed title in example HTML templates

--- a/example/templates/dir2web.html
+++ b/example/templates/dir2web.html
@@ -132,7 +132,7 @@
     </script>
 </head>
 <body>
-    <h1>Redis2Websocket/Flask-SocketIO demo</h1>
+    <h1>dir2web ws-emit demo</h1>
     
     <h2>Files:</h2>
     <div>
