--- a/example/templates/time.html
+++ b/example/templates/time.html
@@ -42,7 +42,7 @@
     </script>
 </head>
 <body>
-    <h1>time Redis2Websocket/Flask-SocketIO demo</h1>
+    <h1>time ws-emit demo</h1>
    
     <span id='time'>
       
